When might Besag not be appropriate

--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -143,13 +143,16 @@ As such, in total the number of sum-to-zero constraints equals to the number of 
 
 The Besag model was originally proposed by @besag1991bayesian for use in image analysis.
 In this setting, areas correspond to pixels arranged in a regular lattice structure.
-Since then, it has seen wider use.
-In some situations, like small-area estimation of HIV, the spatial structure is less regular than a lattice.
-This raises concerns about the Besag model's applicability to this broader setting.
-The discussion in this section is closely linked to:
+In an image, the data point at each pixel can be thought of as an average of the intensity or colour over the space represented by the pixel.
 
-* the modifiable areal unit problem [@openshow1979million], whereby statistical conclusions change as a result of seemingly arbitrary changes in data aggregation;
-* the challenge of ecological inference and the ecological fallacy [@wakefield2010aggregation].
+Since it's original proposal, the Besag model has seen wider use.
+However, for small-area estimation of HIV, the spatial structure corresponds to administrative units.
+These administrative units may have a more irregular spatial structure than a lattice. 
+Furthermore, data points may not come about by uniform averaging over a space.
+For example, population density may vary across the area.
+
+These considerations raise concerns about the Besag model's applicability to the small-area estimation setting, which we explore in this section.
+The discussion is closely linked to the modifiable areal unit problem [@openshow1979million], whereby statistical conclusions change as a result of seemingly arbitrary changes in data aggregation, and the challenge of ecological inference and the ecological fallacy [@wakefield2010aggregation].
 
 #### Compression to adjacency 
 
