--- a/corrections/corrections.Rmd
+++ b/corrections/corrections.Rmd
@@ -42,8 +42,22 @@ I have addressed your suggested corrections point by point, as follows.
 > *I'd like to see some more context relating the potential shortcomings to the public health setting (you have a bit of this in Section 4.1.3).
 For a public health analyst, when might they be most concerned about using the Besag model?
 What kinds of areal arrangements/neighborhood structures/types of data might be most prone to concern?
-E.g., one might be concerned about cases like Canadian provinces where their populations are so concentrated right near neighboring US states and most of the provincial area is sparsely populated. And as we discussed, I'd like for you to see if you can drill down into the localized results of the simulation to give some insight into where the smoothing is sub-optimal in the simulations.
-Relatedly would you expect the features highlighted by your vignettes to occur in reality in public health settings?*
+E.g., one might be concerned about cases like Canadian provinces where their populations are so concentrated right near neighboring US states and most of the provincial area is sparsely populated.
+
+In Section 4.1.3. I have modified the text as follows:
+
+"The Besag model was originally proposed by @besag1991bayesian for use in image analysis.
+In this setting, areas correspond to pixels arranged in a regular lattice structure.
+In an image, the data point at each pixel can be thought of as an average of the intensity or colour over the space represented by the pixel.
+
+Since it's original proposal, the Besag model has seen wider use.
+However, for small-area estimation of HIV, the spatial structure corresponds to administrative units.
+These administrative units may have a more irregular spatial structure than a lattice. 
+Furthermore, data points may not come about by uniform averaging over a space.
+For example, population density may vary across the area."
+
+> And as we discussed, I'd like for you to see if you can drill down into the localized results of the simulation to give some insight into where the smoothing is sub-optimal in the simulations.
+> Relatedly would you expect the features highlighted by your vignettes to occur in reality in public health settings?*
 
 Not yet resolved.
 
