Some corrections work

--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -471,7 +471,7 @@ In Equation \@ref(eq:matern):
 * $\nu$ is the smoothness hyperparameter;
 * $l$ is the length-scale hyperparameter on the latitude-longitude scale.
 
-The smoothness parameter $\nu$ is difficult to identify from data and so was fixed at $3/2$.
+We fixed the smoothness hyperparameter $\nu$ to $3/2$ to avoid concerns regarding the joint identifiability of the smoothness and lengthscale hyperparameters.
 This value matches that used to simulate data, and simplifies Equation \@ref(eq:matern) as follows
 \begin{equation}
 k(s, s') = \left(1 + \frac{\sqrt{3} \lvert s - s' \rvert}{l} \right) \exp \left(- \frac{\sqrt{3} \lvert s - s' \rvert}{l} \right).
