--- a/references.bib
+++ b/references.bib
@@ -3099,3 +3099,41 @@ URL = {https://doi.org/10.1214/12-SS102}
   url = {https://athowes.github.io/posts/2023-04-21-risk-group-retrospective/},
   year = {2023}
 }
+
+@article{zhang2004inconsistent,
+  title={Inconsistent estimation and asymptotically equal interpolations in model-based geostatistics},
+  author={Zhang, Hao},
+  journal={Journal of the American Statistical Association},
+  volume={99},
+  number={465},
+  pages={250--261},
+  year={2004},
+  publisher={Taylor \& Francis}
+}
+
+@article{anderes2010consistent,
+  title={On the consistent separation of scale and variance for Gaussian random fields},
+  author={Anderes, Ethan},
+  year={2010}
+}
+
+@book{williams2006gaussian,
+  title={Gaussian processes for machine learning},
+  author={Williams, Christopher KI and Rasmussen, Carl Edward},
+  volume={2},
+  number={3},
+  year={2006},
+  publisher={MIT press Cambridge, MA}
+}
+
+@article{karvonen2023maximum,
+  author  = {Toni Karvonen and Chris J. Oates},
+  title   = {Maximum likelihood estimation in Gaussian process regression is ill-posed},
+  journal = {Journal of Machine Learning Research},
+  year    = {2023},
+  volume  = {24},
+  number  = {120},
+  pages   = {1--47},
+  url     = {http://jmlr.org/papers/v24/22-1153.html}
+}
+
