--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -533,7 +533,7 @@ Uniformity was assessed using PIT histograms [@dawid1984present] and empirical c
 #### Vignette geometries
 
 As each geometry only had three areas, the sample size of 250 synthetic data was insufficient to distinguish between inferential models for the vignette geometries.
-Figures \@ref(fig:crps-mean-se-1), \@ref(fig:crps-mean-se-2), \@ref(fig:crps-mean-se-3) and \@ref(fig:crps-mean-se-4) show that almost all 95% credible intervals for the mean CRPS overlap.
+Figures \@ref(fig:crps-mean-se-1), \@ref(fig:crps-mean-se-2), \@ref(fig:crps-mean-se-3) and \@ref(fig:crps-mean-se-4) show that almost all 95% credible intervals for the mean CRPS in estimating $\rho_i$ overlap.
 
 Additionally, for the vignette geometries, both the heuristic method for fixing a lengthscale, and lengthscale prior distribution, were misspecified.
 Three points was insufficient to learn the lengthscale, and as such misspecification of the prior distribution propagated to the posterior distribution (Figure \@ref(fig:lengthscale-recovery)).
@@ -545,21 +545,21 @@ Second, more careful specification of study with regard to the lengthscale.
 
 #### Realistic geometries
 
-(ref:crps-mean-se-grid) The mean CRPS and its standard error for each inferential model and simulation model on the grid geometry (Panel \@ref(fig:geometries)E).
+(ref:crps-mean-se-grid) The mean CRPS in estimating $\rho_i$ and its standard error for each inferential model and simulation model on the grid geometry (Panel \@ref(fig:geometries)E). The mean value averages over both areas and simulation runs.
 
 ```{r crps-mean-se-grid, fig.cap="(ref:crps-mean-se-grid)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-grid.png")
 knitr::include_graphics(path)
 ```
 
-(ref:crps-mean-se-civ) The mean CRPS and its standard error for each inferential model and simulation model on the Côte d’Ivoire geometry (Panel \@ref(fig:geometries)F).
+(ref:crps-mean-se-civ) The mean CRPS in estimating $\rho_i$ and its standard error for each inferential model and simulation model on the Côte d’Ivoire geometry (Panel \@ref(fig:geometries)F). The mean value averages over both areas and simulation runs.
 
 ```{r crps-mean-se-civ, fig.cap="(ref:crps-mean-se-civ)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-civ.png")
 knitr::include_graphics(path)
 ```
 
-(ref:crps-mean-se-tex) The mean CRPS and its standard error for each inferential model and simulation model on the Texas geometry (Panel \@ref(fig:geometries)G).
+(ref:crps-mean-se-tex) The mean CRPS in estimating $\rho_i$ and its standard error for each inferential model and simulation model on the Texas geometry (Panel \@ref(fig:geometries)G). The mean value averages over both areas and simulation runs.
 
 ```{r crps-mean-se-tex, fig.cap="(ref:crps-mean-se-tex)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-tex.png")
@@ -567,10 +567,11 @@ knitr::include_graphics(path)
 ```
 
 The two problems with the vignette geometry study did not apply to the more realistic geometries.
-Figures \@ref(fig:crps-mean-se-grid), \@ref(fig:crps-mean-se-civ) and \@ref(fig:crps-mean-se-tex) show mean CRPS values with 95% credible intervals which rarely overlap, and hence provide meaningful findings.
+Figures \@ref(fig:crps-mean-se-grid), \@ref(fig:crps-mean-se-civ) and \@ref(fig:crps-mean-se-tex) show mean CRPS values in estimating $\rho_i$ with 95% credible intervals which rarely overlap, and hence provide meaningful findings.
 Mean MSE and CRPS values are provided in Tables \@ref(tab:mse-table) and \@ref(tab:crps-table).
+The mean values are an average over both the number of areas in each geometry and the number of simulations run.
 
-The average CRPS varied substantially between the three models (Table \@ref(tab:simulation-models)) used to simulate synthetic data.
+The mean CRPS varied substantially between the three models (Table \@ref(tab:simulation-models)) used to simulate synthetic data.
 IID structure is harder to predict than spatial structure, and to a lesser extent, Besag structure is harder to predict than IK.
 This observation is explained by correlation structure making forecasting easier.
 
