--- a/corrections/corrections.Rmd
+++ b/corrections/corrections.Rmd
@@ -113,6 +113,9 @@ That is, the mixture of Gaussians does not "take account of posterior dependence
 I think this in part because there is work extending INLA to the joint setting -- which I don't think would need to exist if this question were correct.
 To follow up here.
 
+
+\newpage
+
 ## Minor comments
 
 ### Chapter 2
@@ -136,15 +139,15 @@ Good point, I have added the sentence:
 
 > *14: "UNAIDS process"*
 
-Apologies for this stub!
-This has been been corrected as follows:
+This stub has been been corrected as follows:
 "Indeed, careful validation of data by country teams is a crucial part of the yearly UNAIDS HIV estimates process.".
 
 ### Chapter 3
 
 > *16 (and elsewhere): Please look up usage of "that" vs. "which" so you can join me in the grammar police. "Models which do not produce" -> "Models that do not produce"*
 
-Thank you for the pointer, I have fixed this issue and look forward to joining the good fight.
+Thank you for the pointer!
+I have fixed this issue and look forward to joining the good fight.
 
 > *Fig 3.1: I suggest that you also show the likelihood.*
 
@@ -186,7 +189,12 @@ I have added the sentence:
 
 > *Sec 3.4: worth commenting on additivity of these measures that treat each obs as a unit of information given you are in a spatial setting.*
 
-Note connection to SLOO-CV in Chapter 4.
+Good point.
+I have added the paragraph:
+"Equation (3.11) is additive, and treats each observation as an independent unit of information.
+Special care is therefore required in applying cross-validation techniques to dependent (Section 3.2.1.2) spatio-temporal data.
+For example, Bürkner, Gabry, and Vehtari (2020) and Cooper et al. (2024) use “leave-future-out” (LFO) cross-validation in the time-series context.
+Similarly, in Chapter 4 I apply a spatial-leave-one-out (SLOO) cross-validation scheme."
 
 > *35. (3.30) should be for $\pi_{2hj}$.*
 
@@ -236,7 +244,7 @@ I have updated the text to read: "in the `arealutils` R package [@howes2023areal
 Although I found references [@zhang2004inconsistent; @williams2006gaussian; @anderes2010consistent; @karvonen2023maximum] supporting difficulties estimating one or multiple hyperparameters for spatial models (including using the Matérn kernel) I did not find a reference to directly support $\nu$ being difficult to estimate.
 For example, @williams2006gaussian note that above $\nu = 7/2$ (i.e. quite smooth) then it's difficult to estimate $\nu$ from "finite noisy training samples".
 Hence I have updated the text to read: "We fixed the smoothness hyperparameter $\nu$ to $3/2$ to avoid concerns regarding the joint identifiability of the smoothness and lengthscale hyperparameters.".
-The observations in Chapter 4 being from a binomial distribution, to me intuitively, does support further that $\nu$ would be very difficult to estimate, but I could be wrong.
+My intuition is that the observations in Chapter 4 being from a binomial distribution further supports that $\nu$ would be difficult to estimate.
 
 > *56: have Li vary with size?*
 
@@ -253,15 +261,22 @@ I have altered the text to read: "and the probability integral transform (PIT; @
 
 > *57: What parameter is shown in Figs 4.7-4.9 - it's not clear you're assessing the latent process values. And in that case you should be clear the CRPS is averaged over locations.*
 
-Not yet resolved.
+Good points!
+I have altered these three captions.
+As an example, for Figure 4.7 the caption now reads:
+
+"The mean CRPS in estimating $\rho_i$ and its standard error for each inferential model and simulation model on the grid geometry  (Panel 4.6E). The mean value averages over both areas and simulation runs."
 
 > *59: Explain that mean CRPS is mean over the simulations.*
 
-Not yet resolved.
+As above, this is a good point!
+I have added the sentence:
+"The mean values are an average over both the number of areas in each geometry and the number of simulations run."
 
 > *63: Table 4.4 has no standard errors.*
 
-Not yet resolved.
+<!-- Not yet resolved. -->
+(Adding standard errors to Table 4.4. would case it not to fit onto the page.)
 
 > *64: "resulted wide"*
 
