--- a/references.bib
+++ b/references.bib
@@ -3137,3 +3137,26 @@ URL = {https://doi.org/10.1214/12-SS102}
   url     = {http://jmlr.org/papers/v24/22-1153.html}
 }
 
+@article{cooper2024cross,
+  title={Cross-validatory model selection for Bayesian autoregressions with exogenous regressors},
+  author={Cooper, Alex and Simpson, Dan and Kennedy, Lauren and Forbes, Catherine and Vehtari, Aki},
+  journal={Bayesian Analysis},
+  volume={1},
+  number={1},
+  pages={1--25},
+  year={2024},
+  publisher={International Society for Bayesian Analysis}
+}
+
+@article{burkner2020approximate,
+  title={Approximate leave-future-out cross-validation for Bayesian time series models},
+  author={B{\"u}rkner, Paul-Christian and Gabry, Jonah and Vehtari, Aki},
+  journal={Journal of Statistical Computation and Simulation},
+  volume={90},
+  number={14},
+  pages={2499--2523},
+  year={2020},
+  publisher={Taylor \& Francis}
+}
+
+
