Couple of minor points and rerender

--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -747,7 +747,7 @@ Though the underlying models are ultimately similar, that is a continuous Matér
 Nonetheless, it would be of value to confirm this empirically.
 
 <!-- * Discussion of the overall area versus point question. Papers of Sam using point level. -->
-This chapter used area-level models to for point-level data throughout.
+This chapter used area-level models to for data which arises by aggregation of point-level data.
 However, @konstantinoudis2020discrete found that using a point-level LGCP model rather than an area-level BYM model may have significant benefits.
 The work in this chapter does not address the broader question of under which circumstances use of an area or point-level model is sensible.
 
@@ -770,8 +770,8 @@ Previous spatial random effect comparison studies [@best2005comparison; @lee2011
 Use of the DIC is strongly discouraged by @vehtari2017practical.
 This study used less flawed measures of model performance, such as the cross-validated CRPS.
 It would be beneficial to compute the DIC and WAIC in Section \@ref(hiv-study) as a comparison.
-Additionally, the measures presented in this work are disaggregated by area.
-With refinements to the sample sizes used, these disaggregated measures could enable nuanced findings about spatial random effect models.
+Additionally, the measures used in this study were computed and presented by individual area.
+With refinements to the sample sizes used, these area-specific measures of performance could enable more nuanced conclusions about the use of spatial random effect models.
 
 Cross-validation was performed using $\rho$ as the forecasting target, rather than $y$ as is typical.
 This decision was made because applied interest is in forecasting HIV prevalence at a district level, not forecasting the outcome of a household survey.
