--- a/corrections/corrections.Rmd
+++ b/corrections/corrections.Rmd
@@ -288,11 +288,14 @@ Changed, thank you!
 
 > *67: "This chapter used of area-level models to for point-level data throughout". I can't parse this. You can only use point level model if have point level data.*
 
-Not yet resolved.
+I have altered the sentence as follows:
+"This chapter used area-level models to for data which arises by aggregation of point-level data."
 
 > *67: "measures are disaggregated by area" - not sure of the point here.*
 
-Not yet resolved.
+I have altered the text to clarify the point:
+"Additionally, the measures used in this study were computed and presented by individual area.
+With refinements to the sample sizes used, these area-specific measures of performance could enable more nuanced conclusions about the use of spatial random effect models."
 
 ### Chapter 5
 
@@ -316,7 +319,8 @@ Not yet resolved.
 
 > *77: Table 5.2: phi_{ik} should be u_{ik}.*
 
-Good spot! Thank you, fixed.
+Good spot!
+Thank you, fixed.
 
 > *80: Mention country-specific vs single models earlier.*
 
